# GUI_power_supply

./: CMakeLists.txt  CMakeLists.txt.user.394a62e  GUI_MAIN_POWER_SUPPLY.cpp  GUI_MAIN_POWER_SUPPLY.h  README.md  UI_POWER_SUPPLY.ui  main.cpp  resources.qrc
docs/: info.docx  info.vsdx
drivers/: drv_power_supply.cpp  drv_power_supply.h
